Делает секцию skils под три устройства

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 <!--Шапка сайта-->
-  <header class="page-header">
+  <!-- <header class="page-header">
     <div class="container main-nav">
       <nav class="logo-nav">
        <a href="./index.html" class="logo-nav__logo link-all">
@@ -45,21 +45,21 @@
           </svg>+38 096 111 11 11</a></li>
     </ul>
     </div>
-  </header> 
+  </header>  -->
 
 
   <main>
 <!--Hero-->
 
-    <section class="hero">
+    <!-- <section class="hero">
         <div class="container hero-container">
         <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
         <button class="hero__button" type="button" data-modal-open>Заказать услугу</button>
         </div>
-    </section>
+    </section> -->
 
-<!--Soft skils-->
-<section class="skils section">
+<!-- Soft skils -->
+ <section class="skils section">
     <div class="container soft-skils">
     <h2 class="skils__title visually-hidden">Умения</h2>
 
@@ -85,7 +85,8 @@
 </section>
 
 <!-- Чем мы занимаемся -->
-<section class="works">
+
+<!-- <section class="works">
   <div class="container work">
     <h2 class="works__title">Чем мы занимаемся</h2>
     <ul class="works__cards list">
@@ -108,10 +109,11 @@
         </li>
     </ul>
     </div>
-</section>
+</section> -->
 
 <!--Команда-->
-<section class="commands">
+
+<!-- <section class="commands">
     <div class="container">
     <h2 class="commands__title">Наша команда</h2>
     <ul class="command-card list">
@@ -257,10 +259,11 @@
         </li>
     </ul>
     </div>
-</section>
+</section> -->
   </main>
 
 <!-- Постоянные клиенты -->
+<!-- 
 <section class="klient">
 <div class="klients container">
   <h2 class="klients__title">Постоянные клиенты</h2>
@@ -311,10 +314,10 @@
     </li>
   </ul>
 </div>
-</section>
+</section> -->
 
 <!--Подвал-->
-
+<!-- 
 <footer>
 
 <section class="footer">
@@ -384,7 +387,7 @@
 
 </section>
 
-  </footer>
+  </footer> -->
 
 <!-- Модальное окно -->
 
