--- a/index.html
+++ b/index.html
@@ -333,16 +333,14 @@
   </main>
 
 <!-- Постоянные клиенты -->
-<!-- 
+
 <section class="klient">
 <div class="klients container">
   <h2 class="klients__title">Постоянные клиенты</h2>
   <ul class="klients-list list">
     <li class="klients-list__item">
       <a href="#" class="klients-list__link">
-        <svg class="klients-list__icon" 
-        width="106" 
-        height="60">
+        <svg class="klients-list__icon" width="106" height="60">
           <use href="./icon/sprite.svg#icon-Logo6"></use>
         </svg>
       </a>
@@ -384,7 +382,7 @@
     </li>
   </ul>
 </div>
-</section> -->
+</section>
 
 <!--Подвал-->
 <!-- 
