--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,22 @@
         <ul class="flex list">
             <li class="flex__element"> 
             <div class="overley">
-                <img class="image-example" src="./images2/img1.jpg" alt="Технокряк" width="370" height="294">
+                <picture>
+                    <source srcset="
+                        ./images2/img1.jpg 1x
+                        ./images2/img1-2x.jpg 2x
+                        " media="(min-width: 1200px)">
+                    <source srcset="
+                        ./images2/img1-tab.jpg 1x
+                        ./images2/img1-tab-2x.jpg 2x
+                        " media="(min-width: 768px)">
+                    <source srcset="
+                        ./images2/img1-mob.jpg 1x
+                        ./images2/img1-mob-2x.jpg 2x
+                        " media="(min-width: 320px)">
+                    <img class="image-example" src="./images2/img1.jpg" alt="Технокряк">
+                </picture>
+                
                   <div class="overley__text">
                       <p class="overley__phrase">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.</p>
