Секция "Чем мы занимаемся"

--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
     </ul>
 
     <button type="button" class="open-menu-btn">
-      <svg width="40" height="40">
+      <svg class="open-menu-btn__icon" width="40" height="40">
         <use href="./icon/sprite.svg#icon-menu">
         </use>
       </svg>
     </button>
     </div>
 
-    <div class="mob-menu">
+    <div class="mob-menu is-hidden">
       <div class="container">
         <div class="mob-menu-top">
       <button type="button" class="close-menu-btn">
-        <svg width="40" height="40">
+        <svg class="close-menu-btn__icon" width="40" height="40">
           <use href="./icon/sprite.svg#icon-close">
           </use>
         </svg>
@@ -130,7 +130,7 @@
 
 <!-- Чем мы занимаемся -->
 
-<!-- <section class="works">
+<section class="works">
   <div class="container work">
     <h2 class="works__title">Чем мы занимаемся</h2>
     <ul class="works__cards list">
@@ -174,7 +174,7 @@
         </li>
     </ul>
     </div>
-</section> -->
+</section>
 
 <!--Команда-->
 
