--- a/index.html
+++ b/index.html
@@ -406,42 +406,42 @@
     <li class="klients-list__item">
       <a href="#" class="klients-list__link">
         <svg class="klients-list__icon" width="106" height="60">
-          <use href="./icon/sprite.svg#icon-Client-1"></use>
+          <use href="./icon/sprite.svg#icon-Logo6"></use>
         </svg>
       </a>
     </li>
     <li class="klients-list__item">
       <a href="#" class="klients-list__link">
         <svg class="klients-list__icon" width="106" height="60">
-          <use href="./icon/sprite.svg#icon-Client-2"></use>
+          <use href="./icon/sprite.svg#icon-Logo1"></use>
         </svg>
       </a>
     </li>
     <li class="klients-list__item">
       <a href="#" class="klients-list__link">
         <svg class="klients-list__icon" width="106" height="60">
-          <use href="./icon/sprite.svg#icon-Client-3"></use>
+          <use href="./icon/sprite.svg#icon-Logo2"></use>
         </svg>
       </a>
     </li>
     <li class="klients-list__item">
       <a href="#" class="klients-list__link">
         <svg class="klients-list__icon" width="106" height="60">
-          <use href="./icon/sprite.svg#icon-Client-4"></use>
+          <use href="./icon/sprite.svg#icon-Log3"></use>
         </svg>
       </a>
     </li>
     <li class="klients-list__item">
       <a href="#" class="klients-list__link">
         <svg class="klients-list__icon" width="106" height="60">
-          <use href="./icon/sprite.svg#icon-Client-5"></use>
+          <use href="./icon/sprite.svg#icon-Logo4"></use>
         </svg>
       </a>
     </li>
     <li class="klients-list__item">
       <a href="#" class="klients-list__link">
         <svg class="klients-list__icon" width="106" height="60">
-          <use href="./icon/sprite.svg#icon-Client-6"></use>
+          <use href="./icon/sprite.svg#icon-Logo5"></use>
         </svg>
       </a>
     </li>
