--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
 </section>
 
 <!--Подвал-->
-<!-- 
+
 <footer>
 
 <section class="footer">
@@ -502,25 +502,25 @@
     </ul>
 </div>
 
-<div>
-  <h2 class="network__title">Подпишитесь на рассылку</h2>
+<div class="signup">
+  <h2 class="signup__title">Подпишитесь на рассылку</h2>
   <form name="signup-form" autocomplete="on" novalidate>
     <label class="signup-form__label">
       <input class="signup-form__mail" type="email" name="email" placeholder="E-mail" />
     </label>
-    <button class="footer-button" type="submit">Подписаться
+  <button class="footer-button" type="submit">Подписаться
       <svg class="footer-button__icon" width="24" height="24">
         <use href="./icon/sprite.svg#icon-send">
         </use>
       </svg>
-    </button>
+  </button>
   </form>
 </div>
 </div>
 
 </section>
 
-  </footer> -->
+  </footer>
 
 <!-- Модальное окно -->
 
