--- a/index.html
+++ b/index.html
@@ -455,6 +455,7 @@
 
 <section class="footer">
 <div class="container main-footer">
+  <div class="container-tab">
   <div class="footer-section">
     <a href="./index.html" class="footer-section__logo link-all">Web<span class="footer-section__studio link-all">Studio</span></a>
 
@@ -501,6 +502,7 @@
       </li>
     </ul>
 </div>
+</div>
 
 <div class="signup">
   <h2 class="signup__title">Подпишитесь на рассылку</h2>
@@ -517,7 +519,6 @@
   </form>
 </div>
 </div>
-
 </section>
 
   </footer>
