--- a/portfolio.html
+++ b/portfolio.html
@@ -353,62 +353,64 @@
 </main>
 
 <!--Подвал-->
-<!-- <footer>
+<footer>
 
     <section class="footer">
         <div class="container main-footer">
-            <div class="footer-section">
-                <a href="./index.html" class="footer-section__logo link-all">Web<span
-                        class="footer-section__studio link-all">Studio</span></a>
+            <div class="container-tab">
+                <div class="footer-section">
+                    <a href="./index.html" class="footer-section__logo link-all">Web<span
+                            class="footer-section__studio link-all">Studio</span></a>
 
-                <address class="footer-section__add">
-                    г. Киев, пр-т Леси Украинки, 26
-                </address>
+                    <address class="footer-section__add">
+                        г. Киев, пр-т Леси Украинки, 26
+                    </address>
 
-                <ul class="footer-cont list">
-                    <li class="footer-cont__mail"><a href="mailto:info@info@example.com"
-                            class="footer-cont__link link-all">info@devstudio.com</a></li>
-                    <li class="footer-cont__tel"><a href="tel:+380991111111" class="footer-cont__link link-all">+38 099
-                            111 11 11</a></li>
-                </ul>
+                    <ul class="footer-cont list">
+                        <li class="footer-cont__mail"><a href="mailto:info@info@example.com"
+                                class="footer-cont__link link-all">info@devstudio.com</a></li>
+                        <li class="footer-cont__tel"><a href="tel:+380991111111" class="footer-cont__link link-all">+38
+                                099 111 11 11</a></li>
+                    </ul>
+                </div>
+
+                <div class="network">
+                    <h2 class="network__title icons">Присоединяйтесь</h2>
+                    <ul class="soc-list soc-list--footer list">
+                        <li class="soc-list__item">
+                            <a href="" class="soc-list__link soc-list__link--color">
+                                <svg class="soc-list__icon soc-list__icon--fill">
+                                    <use href="./icon/sprite.svg#icon-Ellipse_inst">
+                                    </use>
+                                </svg></a>
+                        </li>
+                        <li class="soc-list__item">
+                            <a href="" class="soc-list__link soc-list__link--color">
+                                <svg class="soc-list__icon soc-list__icon--fill">
+                                    <use href="./icon/sprite.svg#icon-Ellipse_berd">
+                                    </use>
+                                </svg></a>
+                        </li>
+                        <li class="soc-list__item">
+                            <a href="" class="soc-list__link soc-list__link--color">
+                                <svg class="soc-list__icon soc-list__icon--fill">
+                                    <use href="./icon/sprite.svg#icon-Ellipse_f">
+                                    </use>
+                                </svg></a>
+                        </li>
+                        <li class="soc-list__item">
+                            <a href="" class="soc-list__link soc-list__link--color">
+                                <svg class="soc-list__icon soc-list__icon--fill">
+                                    <use href="./icon/sprite.svg#icon-Ellipse_in">
+                                    </use>
+                                </svg></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
 
-            <div class="network">
-                <h2 class="network__title icons">Присоединяйтесь</h2>
-                <ul class="soc-list soc-list--footer list">
-                    <li class="soc-list__item">
-                        <a href="" class="soc-list__link soc-list__link--color">
-                            <svg class="soc-list__icon soc-list__icon--fill">
-                                <use href="./icon/sprite.svg#icon-Ellipse_inst">
-                                </use>
-                            </svg></a>
-                    </li>
-                    <li class="soc-list__item">
-                        <a href="" class="soc-list__link soc-list__link--color">
-                            <svg class="soc-list__icon soc-list__icon--fill">
-                                <use href="./icon/sprite.svg#icon-Ellipse_berd">
-                                </use>
-                            </svg></a>
-                    </li>
-                    <li class="soc-list__item">
-                        <a href="" class="soc-list__link soc-list__link--color">
-                            <svg class="soc-list__icon soc-list__icon--fill">
-                                <use href="./icon/sprite.svg#icon-Ellipse_f">
-                                </use>
-                            </svg></a>
-                    </li>
-                    <li class="soc-list__item">
-                        <a href="" class="soc-list__link soc-list__link--color">
-                            <svg class="soc-list__icon soc-list__icon--fill">
-                                <use href="./icon/sprite.svg#icon-Ellipse_in">
-                                </use>
-                            </svg></a>
-                    </li>
-                </ul>
-            </div>
-
-            <div>
-                <h2 class="network__title">Подпишитесь на рассылку</h2>
+            <div class="signup">
+                <h2 class="signup__title">Подпишитесь на рассылку</h2>
                 <form name="signup-form" autocomplete="on" novalidate>
                     <label class="signup-form__label">
                         <input class="signup-form__mail" type="email" name="email" placeholder="E-mail" />
@@ -422,10 +424,10 @@
                 </form>
             </div>
         </div>
-
     </section>
 
-</footer> -->
+</footer>
+
 <script src="./js/menu.js"></script>
 </body>
 </html>
