--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 <section class="footer">
 <div class="container main-footer">
   <div class="container-tab">
-  <div class="footer-section">
+    <div class="footer-section">
     <a href="./index.html" class="footer-section__logo link-all">Web<span class="footer-section__studio link-all">Studio</span></a>
 
     <address class="footer-section__add">
@@ -467,10 +467,10 @@
     <li class="footer-cont__mail"><a href="mailto:info@info@example.com" class="footer-cont__link link-all">info@devstudio.com</a></li>
     <li class="footer-cont__tel"><a href="tel:+380991111111" class="footer-cont__link link-all">+38 099 111 11 11</a></li>
     </ul>
-  </div>
+    </div>
 
-<div class="network">
-  <h2 class="network__title icons">Присоединяйтесь</h2>
+    <div class="network">
+    <h2 class="network__title icons">Присоединяйтесь</h2>
     <ul class="soc-list soc-list--footer list">
       <li class="soc-list__item">
     <a href="" class="soc-list__link soc-list__link--color">
@@ -501,12 +501,12 @@
       </svg></a>
       </li>
     </ul>
-</div>
+  </div>
 </div>
 
 <div class="signup">
   <h2 class="signup__title">Подпишитесь на рассылку</h2>
-  <form name="signup-form" autocomplete="on" novalidate>
+  <form class="signup-form" name="signup-form" autocomplete="on" novalidate>
     <label class="signup-form__label">
       <input class="signup-form__mail" type="email" name="email" placeholder="E-mail" />
     </label>
