--- a/portfolio.html
+++ b/portfolio.html
@@ -60,8 +60,8 @@
                     </svg>
                 </button>
                 <ul class="mob-menu__list list">
-                    <li class="mob-menu__item"><a href="./index.html" class="mob-menu__link link-all current">Студия</a></li>
-                    <li class="mob-menu__item"><a href="./portfolio.html" class="mob-menu__link link-all">Портфолио</a></li>
+                    <li class="mob-menu__item"><a href="./index.html" class="mob-menu__link link-all">Студия</a></li>
+                    <li class="mob-menu__item"><a href="./portfolio.html" class="mob-menu__link link-all current">Портфолио</a></li>
                     <li class="mob-menu__item"><a href="" class="mob-menu__link link-all">Контакты</a></li>
                 </ul>
             </div>
