Фиксит замечания ментора

--- a/portfolio.html
+++ b/portfolio.html
@@ -411,7 +411,7 @@
 
             <div class="signup">
                 <h2 class="signup__title">Подпишитесь на рассылку</h2>
-                <form name="signup-form" autocomplete="on" novalidate>
+                <form class="signup-form" name="signup-form" autocomplete="on" novalidate>
                     <label class="signup-form__label">
                         <input class="signup-form__mail" type="email" name="email" placeholder="E-mail" />
                     </label>
